--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -43,10 +43,9 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusView"
-        app:srcCompat="@android:drawable/checkbox_on_background" />
+        app:layout_constraintTop_toBottomOf="@+id/statusView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
